# StealthBrowser

./: .gclient  .gitignore  BUILD.gn  LICENSE  README.md
.github/workflows/: build.yml
pages/adblocker/: index.html  script.js  styles.css
pages/newtab/: index.html  script.js  styles.css
pages/settings/: index.html  script.js  styles.css
scripts/: build.py  lint.py  setup.py  test.py
src/browser/: browser_process.cc  browser_process.h  main.cc
src/renderer/: renderer_process.cc  renderer_process.h
src/security/: Cargo.toml  security_binding.cc  security_binding.h
src/security/src/: crypto.rs  ffi.rs  filter.rs  lib.rs  privacy.rs
src/ui/: package.json  vite.config.ts
src/ui/src/: App.tsx  styles.css
src/ui/src/components/: NewTabPage.tsx  SettingsPanel.tsx
src/ui/src/navigation/: NavigationBar.tsx
src/ui/src/tabs/: TabBar.tsx
