[package]
name = "stealth-security"
version = "1.0.0"
edition = "2021"
description = "Security module for Stealth Browser"
license = "MIT"

[lib]
name = "stealth_security"
crate-type = ["staticlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
regex = "1.10"
url = "2.5"
base64 = "0.21"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "filter_bench"
harness = false
